# NexusAPI

./: .env  .gitignore  pyproject.toml
app/: main.py
app/api/: router_manager.py
app/api/endpoints/: auth_routes.py  endpoints_init.py  query_routes.py
app/core/: nexus_config.py  security_utils.py
app/models/: conversation_model.py  models_init.py  user_model.py
app/services/: cache_service.py  database_service.py  external_api_service.py
app/utils/: helper_functions.py  logger.py
tests/: test_auth.py  test_main.py
